[package]
name = "nmr-contours"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ucsf_nmr = "0.1.2"
ucsf_nmr = { path = "../ucsf_nmr" }
contour = "0.1.0"
plotters = "0.2.12"
palette = "0.5.0"
geojson = "0.13.0"
